--- a/.github/ISSUE_TEMPLATE/------.md
+++ b/.github/ISSUE_TEMPLATE/------.md
@@ -1,8 +1,8 @@
 ---
-name: 특징, 기능
-about: 특징, 기능
-title: "[Feat]"
-labels: "[Feat\U0001F680]"
+name: '버그 수정 '
+about: 버그 수정
+title: ''
+labels: "[Bug\U0001F6E0]"
 assignees: ''
 
 ---
