Update issue templates

--- a/.github/ISSUE_TEMPLATE/------.md
+++ b/.github/ISSUE_TEMPLATE/------.md
@@ -1,8 +1,8 @@
 ---
-name: '버그 수정 '
-about: 버그 수정
+name: 기능, 특징
+about: '기능 특징 '
 title: ''
-labels: "[Bug\U0001F6E0]"
+labels: "[Feat\U0001F680]"
 assignees: ''
 
 ---
