Update issue templates

--- a/.github/ISSUE_TEMPLATE/-----.md
+++ b/.github/ISSUE_TEMPLATE/-----.md
@@ -1,8 +1,8 @@
 ---
-name: 기본 세팅
-about: 기본 세팅
-title: "[Set]"
-labels: "[Set✔️]"
+name: 버그 문제
+about: 버그 수정
+title: "[Bug]"
+labels: "[Bug\U0001F6E0]"
 assignees: ''
 
 ---
